# Pyontronics

./: .gitignore  CITATION.cff  LICENSE  PAPER.md  README.md  demo.ipynb  opti.py  optimization.ipynb  optuna_esn_MG.db  pyproject.toml  requirements.txt  results.ipynb  results_FD_2026_MG_larger_network.ipynb  results_FD_2026_MG_smaller_network.ipynb  results_FD_2026_power_comparison.ipynb
.github/: py_test.yml
.github/workflows/: py_test.yml
ESN/: ESN_LIN.py  ESN_LIN_code.py  __init__.py  band_pass_network.py  echo_state_network.py  mackey_glass.py  steady_state_conductance.py  visualization.py
optimization/: optimize_esn_and_bpn_for_HWTS.py  optimize_esn_and_bpn_for_VPP.py  optimize_mg.py  optimize_pwdb.py  optimize_vent.py
pyontronics/: __init__.py  activators.py  echo_state_network.py  linear_autoregression.py  memristor_network.py  steady_state_conductance.py  visualization.py
tests/: test_esn.py
