[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyontronics"
version = "0.1.1"
authors = [
  { name="Pyontronics Developers", email="t.m.kamsma@uu.nl" },
]
description = "A Python package for simulating iontronic neuromorphic devices and Echo State Networks."
readme = "README.md"
requires-python = ">=3.11"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "tqdm",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
graph = ["networkx"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
"Homepage" = "https://github.com/TMKamsma/Pyontronics"
"Bug Tracker" = "https://github.com/TMKamsma/Pyontronics/issues"

[tool.setuptools]
packages = ["pyontronics"]
